--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.2",
     "font-awesome": "^4.7.0",
     "primeng": "^7.1.0",
-    "rxjs": "~6.3.3",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
